--- a/src/components/findRooms/findRooms.pug
+++ b/src/components/findRooms/findRooms.pug
@@ -1,4 +1,4 @@
-include ../dateDropdown/dateDropdown.pug
+include ../date-dropdown/date-dropdown.pug
 include ../dropdown/dropdown.pug
 include ../button/button.pug
 
@@ -7,8 +7,8 @@ mixin findRooms({id = ''})
     form.findRooms__form
       .findRooms__header-wrapper
         h1.findRooms__header Найдём номера под ваши пожелания
-      .findRooms__dateDropdown
-        +dateDropdown({uniqId: `cards__dateDropdown_${id}`, firstTitle: 'прибытие', secondTitle: 'выезд'})
+      .findRooms__date-dropdown
+        +date-dropdown({uniqId: `cards__dateDropdown_${id}`, firstTitle: 'прибытие', secondTitle: 'выезд'})
       .findRooms__guestDropdown
         +dropdown({uniqId: `cards__dropdown_${id}`, title: 'гости', description: '', text: 'Сколько гостей'})
       .findRooms__button
