--- a/src/pages/searchRoom/searchRoom.pug
+++ b/src/pages/searchRoom/searchRoom.pug
@@ -2,7 +2,7 @@ extends ../../layouts/pages/pages.pug
 
 include ../../components/textField/textField.pug
 include ../../components/dropdown/dropdown.pug
-include ../../components/filterDateDropdown/filterDateDropdown.pug
+include ../../components/filter-date-dropdown/filter-date-dropdown.pug
 include ../../components/checkbox/checkbox.pug
 include ../../components/expandable-checkbox-list/expandable-checkbox-list.pug
 include ../../components/pagination/pagination.pug
@@ -19,7 +19,7 @@ block content
       +button({title: 'Открыть фильтр', type: 'big', arrow: false})
     .searchRoom__dropdown-filter.js-searchRoom__dropdown-filter
       .searchRoom__filter-menu 
-        +filterDateDropdown({uniqId: 'searchRoom__filterDateDropdown2', title: 'даты пребывания в отеле'})
+        +filter-date-dropdown({uniqId: 'searchRoom__filterDateDropdown2', title: 'даты пребывания в отеле'})
       .searchRoom__filter-menu 
         +dropdown({uniqId: 'searchRoom__dropdown2', title: 'гости', description: '', small: true, text: 'Сколько гостей'})
       .searchRoom__filter-menu 
@@ -39,7 +39,7 @@ block content
     .searchRoom__sidebar
       form.searchRoom__form.js-searchRoom__form
         .searchRoom__date-dropdown 
-          +filterDateDropdown({uniqId: 'searchRoom__filterDateDropdown1', title: 'даты пребывания в отеле'})
+          +filter-date-dropdown({uniqId: 'searchRoom__filterDateDropdown1', title: 'даты пребывания в отеле'})
         .searchRoom__guestDropdown
           +dropdown({uniqId: 'searchRoom__dropdown1', title: 'гости', description: '', small: true, text: 'Сколько гостей'})
         .searchRoom__ratePriceSlider
