--- a/src/pages/roomDetails/roomDetails.scss
+++ b/src/pages/roomDetails/roomDetails.scss
@@ -78,7 +78,7 @@
     @media (max-width: 700px) {
       margin: 0;
     }
-    & .iconTextList {
+    & .icon-text-list {
       margin-top: 20px;
     }
   }
