--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -1,7 +1,7 @@
 extends ../../layouts/UI/UI.pug
 include ../../components/room/room.pug
 include ../../components/airDatePicker/airDatePicker.pug
-include ../../components/findRooms/findRooms.pug
+include ../../components/find-rooms/find-rooms.pug
 include ../../components/registration/registration.pug
 include ../../components/booking/booking.pug
 include ../../components/login/login.pug
@@ -15,8 +15,8 @@ block header
 block content
   section.cards 
     .cards__firstColumn
-      .cards__findRooms
-        +findRooms({id: 'cardsFindRooms1'})
+      .cards__find-rooms
+        +find-rooms({id: 'cardsFindRooms1'})
       .cards__registration
         +registration({})
     .cards__secondColumn
