--- a/src/pages/formElements/formElements.scss
+++ b/src/pages/formElements/formElements.scss
@@ -158,7 +158,7 @@
     &-box {
       display: flex;
 
-      & .likeButton:first-of-type {
+      & .like-button:first-of-type {
         margin-right: 9px;
       }
     }
