--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -7,11 +7,11 @@ include ../../components/filter-date-dropdown/filter-date-dropdown.pug
 include ../../components/date-dropdown/date-dropdown.pug
 include ../../components/checkbox/checkbox.pug
 include ../../components/bullet-list/bullet-list.pug
-include ../../components/radioButton/radioButton.pug
+include ../../components/radio-button/radio-button.pug
 include ../../components/expandable-checkbox-list/expandable-checkbox-list.pug
 include ../../components/icon-text-list/icon-text-list.pug
 include ../../components/like-button/like-button.pug
-include ../../components/rateButton/rateButton.pug
+include ../../components/rate-button/rate-button.pug
 include ../../components/comment/comment.pug
 include ../../components/pagination/pagination.pug
 include ../../components/toggle/toggle.pug
@@ -61,8 +61,8 @@ block content
         .formElements__radio-button
           h3.formElements__header Radio Buttons
           .formElements__radio-button-box
-            +radioButton({id: 'radioButton1', title:'Мужчина', name: 'checkboxed', checked: true})
-            +radioButton({id: 'radioButton2', title: 'Женщина', name: 'checkboxed'})
+            +radio-button({id: 'radio-button1', title:'Мужчина', name: 'checkboxed', checked: true})
+            +radio-button({id: 'radio-button2', title: 'Женщина', name: 'checkboxed'})
         .formElements__toggle
           h3.formElements__header Toggle
           +toggle({id: 'toggle1', text: 'Получать спецпредложения', cheked: true})
@@ -75,8 +75,8 @@ block content
         .formElements__rate-button
           h3.formElements__header rate button
             .formElements__rate-button-box
-              +rateButton({id: 'rateButton1', size: 3})
-              +rateButton({id: 'rateButton2', size: 4})
+              +rate-button({id: 'rateButton1', size: 3})
+              +rate-button({id: 'rateButton2', size: 4})
       .formElements__secondBlock
         .formElements__dropdown
           +dropdown({uniqId: 'dropdown4', title: 'dropdown', description: 'expanded', text: 'Сколько гостей', open: true})
