--- a/src/components/room/room.pug
+++ b/src/components/room/room.pug
@@ -1,4 +1,4 @@
-include ../rateButton/rateButton.pug
+include ../rate-button/rate-button.pug
 include ../UI-kit/numberRoomAndPrice/numberRoomAndPrice.pug
 
 mixin room({id, number, type = '', price, review, array = [], stars = 0})
@@ -18,7 +18,7 @@ mixin room({id, number, type = '', price, review, array = [], stars = 0})
         +numberRoomAndPrice({price: price, type: type, number: number})
       .room__score 
         .room__stars
-          +rateButton({id: id, size: stars})
+          +rate-button({id: id, size: stars})
         .room__review
           span= `${review} `
           span Отзывов
