--- a/src/pages/formElements/formElements.scss
+++ b/src/pages/formElements/formElements.scss
@@ -131,7 +131,7 @@
       margin-top: 10px;
     }
 
-    & .radioButton:first-of-type {
+    & .radio-button:first-of-type {
       margin-right: 20px;
     }
   }
@@ -175,7 +175,7 @@
       display: flex;
       margin-top: 16px;
 
-      & .rateButton:first-of-type {
+      & .rate-button:first-of-type {
         margin-right: 20px;
       }
     }
