--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -22,7 +22,7 @@
     &--main {
       position: relative;
 
-      & .textField__input {
+      & .text-field__input {
         width: 150px;
       }
 
@@ -41,7 +41,7 @@
     &--main {
       position: relative;
 
-      & .textField__input {
+      & .text-field__input {
         width: 150px;
       }
 
