--- a/src/components/filter-date-dropdown/filter-date-dropdown.scss
+++ b/src/components/filter-date-dropdown/filter-date-dropdown.scss
@@ -7,7 +7,7 @@
     width: 266px;
     position: relative;
 
-    & .textField__input {
+    & .text-field__input {
       width: 266px;
     }
   }
