--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -76,16 +76,16 @@
     width: 260px;
     margin-left: 52px;
 
-    & .textField {
+    & .text-field {
       margin-top: 23px;
     }
 
-    & .textField__arrow {
+    & .text-field__arrow {
       top: 11px;
       right: 10px;
     }
 
-    & .textField__input--small {
+    & .text-field__input--small {
       width: 260px;
     }
   }
