--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -1,5 +1,5 @@
 include ../button/button.pug
-include ../textField/textField.pug
+include ../text-field/text-field.pug
 
 mixin dropdown(props)
   -
@@ -8,7 +8,7 @@ mixin dropdown(props)
     const listFurniture = ['спальни', 'кровати', 'ванные комнаты']
     const list = type === 'guests' ? listGuests : listFurniture
   .dropdown.js-dropdown(data-type=`${uniqId}-${type}`)
-    +textField({id: uniqId, title: title, description: description, open: open, value: text, small: small, placeholder: 'Сколько гостей', readonly: true, classNames: 'dropdown__main js-dropdown__main', styles: 'margin-bottom: 17px', dropdown: true})
+    +text-field({id: uniqId, title: title, description: description, open: open, value: text, small: small, placeholder: 'Сколько гостей', readonly: true, classNames: 'dropdown__main js-dropdown__main', styles: 'margin-bottom: 17px', dropdown: true})
     div(
       class=type === "guests" ? `dropdown__bottomField ${open ? "" : "dropdown__bottomField--none"}` : `dropdown__bottomField dropdown__furnitureField ${open ? "" : "dropdown__bottomField--none"}`
     )
