--- a/src/components/login/login.pug
+++ b/src/components/login/login.pug
@@ -1,4 +1,4 @@
-include ../textField/textField.pug
+include ../text-field/text-field.pug
 include ../button/button.pug
 
 mixin login({id = 'loginId'})
@@ -6,9 +6,9 @@ mixin login({id = 'loginId'})
     .login__header-wrapper 
       h1.login__header Войти
     .login__email 
-      +textField({uniqId: `login-textField1-${id}`, title: '', description: '', placeholder: 'Email'})
+      +text-field({uniqId: `login-textField1-${id}`, title: '', description: '', placeholder: 'Email'})
     .login__password 
-      +textField({uniqId: `login-textField2-${id}`, title: '', description: '', placeholder: 'Пароль'})
+      +text-field({uniqId: `login-textField2-${id}`, title: '', description: '', placeholder: 'Пароль'})
     .login__buttonIn 
       +button({title: 'Войти', type: 'big', arrow: true})
     .login__hasAccount 
