--- a/src/components/registration/registration.pug
+++ b/src/components/registration/registration.pug
@@ -1,4 +1,4 @@
-include ../textField/textField.pug
+include ../text-field/text-field.pug
 include ../radio-button/radio-button.pug
 include ../toggle/toggle.pug
 
@@ -7,18 +7,18 @@ mixin registration({id = '', textButton = 'Перейти к оплате'})
     .registration__header-wrapper 
       h1.registration__header Регистрация аккаунта
     .registration__name
-      +textField({uniqId: `registration-textField1-${id}`, title: '', description: '', placeholder: 'Имя'})
+      +text-field({uniqId: `registration-textField1-${id}`, title: '', description: '', placeholder: 'Имя'})
     .registration__surname
-      +textField({uniqId: `registration-textField2-${id}`, title: '', description: '', placeholder: 'Фамилия'})
+      +text-field({uniqId: `registration-textField2-${id}`, title: '', description: '', placeholder: 'Фамилия'})
     .registration__radio-buttons
       +radio-button({id: 'radio-button1', title:'Мужчина', name: id, checked: true})
       +radio-button({id: 'radio-button2', title: 'Женщина', name: id})
     .registration__birthday
-      +textField({uniqId: `registration-textField3-${id}`, title: 'дата рождения', description: '', placeholder: 'ДД.ММ.ГГГГ', mask: true})
+      +text-field({uniqId: `registration-textField3-${id}`, title: 'дата рождения', description: '', placeholder: 'ДД.ММ.ГГГГ', mask: true})
     .registration__email
-      +textField({uniqId: `registration-textField4-${id}`, title: 'данные для входа в сервис', description: '', placeholder: 'Email'})
+      +text-field({uniqId: `registration-textField4-${id}`, title: 'данные для входа в сервис', description: '', placeholder: 'Email'})
     .registration__password
-      +textField({uniqId: `registration-textField5-${id}`, title: '', description: '', placeholder: 'Пароль'})
+      +text-field({uniqId: `registration-textField5-${id}`, title: '', description: '', placeholder: 'Пароль'})
     .registration__toggle
       +toggle({id: 'toggle1', text: 'Получать спецпредложения'})
     .registration__buttonPay
