Renamed UI-kits components

--- a/src/components/UI-kit/number-room-and-price/number-room-and-price.scss
+++ b/src/components/UI-kit/number-room-and-price/number-room-and-price.scss
@@ -1,6 +1,6 @@
 @use 'src/styles/global';
 
-.numberRoomAndPrice {
+.number-room-and-price {
   &__info {
     display: flex;
     justify-content: space-between;
