--- a/src/components/booking/booking.pug
+++ b/src/components/booking/booking.pug
@@ -1,12 +1,12 @@
 include ../date-dropdown/date-dropdown.pug
 include ../dropdown/dropdown.pug
 include ../button/button.pug
-include ../UI-kit/numberRoomAndPrice/numberRoomAndPrice.pug
+include ../UI-kit/number-room-and-price/number-room-and-price.pug
 
 mixin booking({id = 'bookingId'})
   form.booking.js-booking
     .booking__id 
-      +numberRoomAndPrice({price: '9 800', type: 'люкс', number: '888'})
+      +number-room-and-price({price: '9 800', type: 'люкс', number: '888'})
     .booking__date-dropdown 
       +date-dropdown({uniqId: `cards__dateDropdown_${id}`, firstTitle: 'прибытие', secondTitle: 'выезд'})
     .booking__guestDropdown 
